# 404brain-not-found

./: .gitignore  README.md  pyproject.toml  speed_discrepancy.ipynb  temp.md
Development/: Autograd_Graph_Example.ipynb  INaturalist.ipynb  speed_discrepancy.ipynb  working_8th august.ipynb
core/: __init__.py  autograd-graph.py  autograd_graph.py  config.py  custom_tensor.py  cython_weakdict.pyx  dataloader.py  design_tensor_needs.txt  dynamic and static graphs.py  latest tensor.txt  losses.py  memory safe code.txt  memory safe.txt  module.py  module_1.py  optimizers.py  setup_weak_dict.py  temp.py  ten.py  tensor.py
core/Development/: 14th July.ipynb  5th july.ipynb  Dataset_preparation_iNaturalist-12k.ipynb  Welcome_To_Colab (2).ipynb  Welcome_To_Colab (5).ipynb  broadcast_change!.py  broadcast_logic.py  for_tensor.ipynb  memory_ref_fixed.py  non_broadcast.py  only global pooling not working.ipynb  orignal_memory_error_code.py  prompt.txt  verified_but _some_have_errors.ipynb  working 29 july.ipynb  working_1st august.ipynb  working_30th_july.ipynb  working_31st_july.ipynb  working_8th august.ipynb
core/test_Scripts/: rustworkxtime.py  test_autograd_graph.py  test_context_autograd_graph.py  test_conv_gradients.py  testing_batchnorm.py
datasets/: dataloader.py  iNaturalist_12k.py
examples/: FastNet-T0_CIFAR-10.ipynb  ResNet-18 CIFAR-10.ipynb  simple_cnn_model.py  simple_cnn_vs_torch.py
src/neuronix/: __init__.py  config.py  custom_tensor.py  (+4 more)
test_Scripts/: test_autograd_graph.py
tests/: max_pool2d_gradient.py  test_comprehensive.py  test_conv_gradients.py
